prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/integer_overflow.diag.txt
ERROR: integer constant overflow
testData/diagnostics/integer_overflow.nut:1:8

println(1000000000000000000000000000000000000000)
        ^---------------------------------------


